@@ -76,7 +76,9 @@
 						<angle>0</angle>
 						<align>left</align>
 						<scrollsuffix> </scrollsuffix>
+						<visible>!Skin.HasSetting(musicvis.hidetext)</visible>
 					</control>
+					
 				</control>
 				<control type="image">
 					<posx>0</posx>
@@ -97,6 +99,7 @@
 					<angle>0</angle>
 					<textcolor>33ffffff</textcolor>
 				</control>
+				
 			</control>
 			<!-- SHOW INFO -->
 			<control type="group">
@@ -667,19 +670,20 @@
 						<angle>0</angle>
 						<align>left</align>
 					</control>
+					<control type="label">
+						<description>Player Times</description>
+						<posx>1350</posx>
+						<posy>895</posy>
+						<width>1500</width>
+						<label>$INFO[MusicPlayer.Time(mm:ss)]</label>
+						<align>left</align>
+						<font>Font-MusicVis-Time</font>
+						<angle>0</angle>
+						<textcolor>33ffffff</textcolor>
+						<animation effect="slide" time="200" end="0,-90" condition="[Player.ShowInfo | Window.IsVisible(fullscreeninfo)] + !Control.IsVisible(99821)">Conditional</animation>
+					</control>
 				</control>
-				<control type="label">
-					<description>Player Times</description>
-					<posx>1350</posx>
-					<posy>895</posy>
-					<width>1500</width>
-					<label>$INFO[MusicPlayer.Time(mm:ss)]</label>
-					<align>left</align>
-					<font>Font-MusicVis-Time</font>
-					<angle>0</angle>
-					<textcolor>33ffffff</textcolor>
-					<animation effect="slide" time="200" end="0,-90" condition="[Player.ShowInfo | Window.IsVisible(fullscreeninfo)] + !Control.IsVisible(99821)">Conditional</animation>
-				</control>
+				
 			</control>
         </control>
     
